# txt-opencv-tutorial

./: .gitignore  CMakeLists.txt  README.md  opencv-grab.cpp  opencv-ver.cpp  txt_toolchain.cmake
